--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<title> Andy Petersen
+<title> Andy Petersen </title>
+</head>
 <body>
 	<h1>Andy Petersen</h1>
 	<p>This is the personal website of Andy Petersen</p>
 </body>
+</html>
