Added image and updated HTML and CSS

--- a/unit_1/index.html
+++ b/unit_1/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<title> Andy Petersen </title>
-</head>
-<body>
-	<h1>Andy Petersen</h1>
-	<p>This is the personal website of Andy Petersen</p>
-</body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<title> andy petersen </title>
+	</head>
+	<body>
+		<h1>andy petersen</h1>
+		<p>actualize the power of<span id="and"> and.</span></p>
+	</body>
 </html>
