--- a/unit_6/index.html
+++ b/unit_6/index.html
@@ -6,18 +6,20 @@
 	</head>
 	<body>
 		<header>
-			<span id="h1"><span id="and0">and</span>y petersen <span id="slogan0">the power of<span class="and1"> and</span></span></span>
+			<div>
+				<span id="h1"><span id="and0">and</span>y petersen <span id="slogan0">the power of<span id="and1"> and</span></span></span>
+			</div>
 			<nav>
 				<a href="#">RESUME</a> | <a href="#">SKILLS</a> | <a href="#">LINKS</a> | <a href="mailto:andrewfpetersen@gmail.com">CONTACT</a> 
 			</nav>
 		</header>
 		<main> 
 			<br>
-			<p>My life's journey has been one of windy paths, rugged terrain and beautiful vistas. I've been here<span class="and"> and</span> there, done this<span class="and"> and</span> that. Backtracking due to deadends or deciding which direction to take are common realities in the pursuit of discovering something great.</p>
+			<p>My life's journey has been one of windy paths, rugged terrain and majestic vistas. <br>I've been here<span class="and"> and</span> there, done this<span class="and"> and</span> that. <br>Backtracking due to deadends or <br>Choosing a direction to take <br>Are common realities <br>In the pursuit of <br>Discovering <br>Something <br>Great.</p>
 			<br>
-			<p>Currently, I'm on a path toward becoming a UX designer. Maybe this endeavor will be worthwhile. Maybe not. Perhaps there's something even better out there. But, that's precisely the intrigue and beauty of life exploration: you can go this way<span class="and"> and</span> that way with the freedom to chart your own course.</p> 
+			<p>Currently, I'm on a path <br>Toward becoming a UX designer. <br>Maybe this endeavor will be worthwhile. Maybe not. <br>But, that's precisely the intrigue and beauty of life exploration: <br>You can go this way<span class="and"> and</span> that way with the freedom to chart your own course.</p> 
 			<br>
-			<span id="slogan2"><p>In other words, it's <span id="slogan1">the power of<span class="and1"> and</span></span>.</p></span>
+			<span id="slogan2"><p>That's <span id="slogan1">the power of<span id="and2"> and</span></span>.</p></span>
 		</main>		
 		<footer>
 			<p>&copy; 2017 andy petersen</p>
