--- a/unit_8/index.html
+++ b/unit_8/index.html
@@ -6,21 +6,26 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
+		<div class="one"></div>
+    	<div class="three"></div>
 		<header>
-			<div>
-				<span id="h1"><span id="and0">and</span>y petersen</span><span id="slogan0">the power of<span id="and1"> and</span></span>
-			</div>
-			<nav>
-				<a href="#">RESUME</a> | <a href="#">SKILLS</a> | <a href="#">LINKS</a> | <a href="mailto:andrewfpetersen@gmail.com">CONTACT</a> 
-			</nav>
+			<h1><span id="h1"><span id="and0">and</span>y petersen</span>
+			<br><span id="slogan0">the power of<span id="and1"> and</span></span></h1>
 		</header>
-		<main> 
-			<p>My life's journey has been one of windy paths, rugged terrain and majestic vistas. <br>I've been here<span class="and"> and</span> there, done this<span class="and"> and</span> that. <br>Backtracking due to deadends or <br>Choosing a direction to take <br>Are common realities <br>In the pursuit of <br>Discovering <br>Something <br>Great.</p>
-			<p>Currently, I'm on a path <br>Toward becoming a UX designer. <br>Maybe this endeavor will be worthwhile. Maybe not. <br>But, that's precisely the intrigue and beauty of life exploration: <br>You can go this way<span class="and"> and</span> that way with the freedom to chart your own course.</p> 
-			<span id="slogan2"><p>That's <span id="slogan1">the power of<span id="and2"> and</span></span>.</p></span>
-		</main>		
-		<footer>
-			<p>&copy; 2017 andy petersen</p>
-		</footer>	   
+		<aside>
+		<nav>
+			<a href="#">resume</a>
+			<a href="#">skills</a>
+			<a href="#">links</a>
+			<a href="mailto:andrewfpetersen@gmail.com">contact</a>
+			<h4>&copy; 2017 andy petersen</h4> 
+		</nav>
+		</aside> 
+		<main>	
+			<br>
+			<p>My life's journey has seen windy paths, rugged terrain and majestic vistas. <br>I've been here<span class="and"> and</span> there, done this<span class="and"> and</span> that. <br>Backtracking due to deadends or <br>Choosing a direction to take <br>Are common realities <br>In the pursuit of <br>Discovering <br>Something <br>Great.</p>
+		</main>	
+		<div id="P2"><p>Currently, I'm on a path <br>Toward becoming a UX designer. <br>Maybe this endeavor will be worthwhile. Maybe not. <br>But, that's precisely the intrigue and beauty of life exploration: <br>You can go this way<span class="and"> and</span> that way with the freedom to chart your own course.</p></div> 
 	</body>
+	</div>
 </html>
